--- a/WEB_UI/WEB_UI.csproj
+++ b/WEB_UI/WEB_UI.csproj
@@ -2016,9 +2016,8 @@
     <Content Include="Content\module\shared\modal_edit_form.css" />
     <Content Include="Content\module\directory\table_dir_way.css" />
     <Content Include="Content\module\table_tree_way.css" />
+    <Content Include="Content\module\wsd\view_history_operation_send.css" />
     <Content Include="Content\module\wsd\view_history_operation_arrival.css" />
-    <Content Include="Content\module\wsd\operation_send.css" />
-    <Content Include="Content\module\wsd\table_cars_operation.css" />
     <Content Include="Content\module\wsd\table_sostav_outer_way.css" />
     <Content Include="Content\module\wsd\table_cars_outer_way.css" />
     <Content Include="Content\module\wsd\table_cars_way.css" />
@@ -2097,9 +2096,8 @@
     <Content Include="Scripts\module\table_wir_detali.js" />
     <Content Include="Scripts\module\table_wir.js" />
     <Content Include="Scripts\module\table_arrival.js" />
+    <Content Include="Scripts\module\wsd\view_history_operation_send.js" />
     <Content Include="Scripts\module\wsd\view_history_operation_arrival.js" />
-    <Content Include="Scripts\module\wsd\operation_send.js" />
-    <Content Include="Scripts\module\wsd\table_cars_operation.js" />
     <Content Include="Scripts\module\wsd\table_sostav_outer_way.js" />
     <Content Include="Scripts\module\wsd\table_cars_outer_way.js" />
     <Content Include="Scripts\module\wsd\table_cars_way.js" />
