--- a/WEB_UI/WEB_UI.csproj
+++ b/WEB_UI/WEB_UI.csproj
@@ -238,6 +238,7 @@
     <Compile Include="Areas\IDSRWT\IDSRWTAreaRegistration.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_BorderCheckpointController.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_DetentionReturnController.cs" />
+    <Compile Include="Controllers\api\Directoty\IDS_Directory_OperatorsWagonsGroupController.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_Reason_DiscrepancyController.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_CargoGNGController.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_CargoController.cs" />
@@ -2029,6 +2030,7 @@
     <Content Include="Content\module\shared\modal_edit_form.css" />
     <Content Include="Content\module\directory\table_dir_way.css" />
     <Content Include="Content\module\table_tree_way.css" />
+    <Content Include="Content\module\wsd\view_report_remainder_cars.css" />
     <Content Include="Content\module\wsd\view_return_cars.css" />
     <Content Include="Content\module\wsd\view_history_operation_send.css" />
     <Content Include="Content\module\wsd\view_history_operation_arrival.css" />
@@ -2111,6 +2113,7 @@
     <Content Include="Scripts\module\table_wir.js" />
     <Content Include="Scripts\module\table_arrival.js" />
     <Content Include="Scripts\module\wsd\table_total_balance.js" />
+    <Content Include="Scripts\module\wsd\view_report_remainder_cars.js" />
     <Content Include="Scripts\module\wsd\view_return_cars.js" />
     <Content Include="Scripts\module\wsd\view_history_operation_send.js" />
     <Content Include="Scripts\module\wsd\view_history_operation_arrival.js" />
