--- a/MetransMorsService/App.config
+++ b/MetransMorsService/App.config
@@ -1,123 +1,123 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-  <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
   </startup>
   <!-- *********** ЛОГИРОВАНИЕ В ФАЙЛ ************************************** -->
   <log4net>
     <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
-      <param name="File" value="Logs\Informations.log" />
-      <param name="AppendToFile" value="true" />
-      <maxSizeRollBackups value="10" />
-      <maximumFileSize value="5MB" />
-      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+      <param name="File" value="Logs\Informations.log"/>
+      <param name="AppendToFile" value="true"/>
+      <maxSizeRollBackups value="10"/>
+      <maximumFileSize value="5MB"/>
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
       <layout type="log4net.Layout.PatternLayout">
-        <param name="ConversionPattern" value="%d  %-5p %m%n" />
+        <param name="ConversionPattern" value="%d  %-5p %m%n"/>
       </layout>
       <filter type="log4net.Filter.LevelRangeFilter">
-        <levelMin value="INFO" />
-        <levelMax value="WARN" />
+        <levelMin value="INFO"/>
+        <levelMax value="WARN"/>
       </filter>
     </appender>
     <appender name="ErrorFile" type="log4net.Appender.RollingFileAppender">
-      <file value="Logs\Errors.log" />
-      <appendToFile value="true" />
-      <maximumFileSize value="5MB" />
-      <maxSizeRollBackups value="10" />
+      <file value="Logs\Errors.log"/>
+      <appendToFile value="true"/>
+      <maximumFileSize value="5MB"/>
+      <maxSizeRollBackups value="10"/>
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%d %level %thread %logger - %message%newline" />
+        <conversionPattern value="%d %level %thread %logger - %message%newline"/>
       </layout>
       <filter type="log4net.Filter.LevelRangeFilter">
-        <levelMin value="ERROR" />
-        <levelMax value="FATAL" />
+        <levelMin value="ERROR"/>
+        <levelMax value="FATAL"/>
       </filter>
     </appender>
     <appender name="DebugFile" type="log4net.Appender.RollingFileAppender">
-      <file value="Logs\Debug.log" />
-      <appendToFile value="true" />
-      <maximumFileSize value="5MB" />
-      <maxSizeRollBackups value="10" />
+      <file value="Logs\Debug.log"/>
+      <appendToFile value="true"/>
+      <maximumFileSize value="5MB"/>
+      <maxSizeRollBackups value="10"/>
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%d %level %thread %logger - %message%newline" />
+        <conversionPattern value="%d %level %thread %logger - %message%newline"/>
       </layout>
       <filter type="log4net.Filter.LevelRangeFilter">
-        <levelMin value="DEBUG" />
-        <levelMax value="DEBUG" />
+        <levelMin value="DEBUG"/>
+        <levelMax value="DEBUG"/>
       </filter>
     </appender>
     <logger name="LOGGER">
-      <appender-ref ref="LogFileAppender" />
-      <appender-ref ref="ErrorFile" />
-      <appender-ref ref="DebugFile" />
+      <appender-ref ref="LogFileAppender"/>
+      <appender-ref ref="ErrorFile"/>
+      <appender-ref ref="DebugFile"/>
     </logger>
   </log4net>
   <appSettings>
     <!-- *********** БИБЛИОТЕКА ЛОГИРОВАНИЯ **************************** -->
     <!-- Настройки логирования -->
-    <add key="ESourceName" value="METRANS_MORS" />
-    <add key="ELogName" value="IDS_MORS_METRANS" />
+    <add key="ESourceName" value="METRANS_MORS"/>
+    <add key="ELogName" value="IDS_MORS_METRANS"/>
     <!-- В журнал Windows -->
-    <add key="ELog" value="True" />
-    <add key="ELogException" value="True" />
-    <add key="ELogEvent" value="True" />
-    <add key="ELogServices" value="True" />
+    <add key="ELog" value="True"/>
+    <add key="ELogException" value="True"/>
+    <add key="ELogEvent" value="True"/>
+    <add key="ELogServices" value="True"/>
     <!-- В базу данных -->
-    <add key="DBLog" value="False" />
-    <add key="DBLogException" value="True" />
-    <add key="DBLogEvent" value="True" />
-    <add key="DBLogServices" value="True" />
+    <add key="DBLog" value="False"/>
+    <add key="DBLogException" value="True"/>
+    <add key="DBLogEvent" value="True"/>
+    <add key="DBLogServices" value="True"/>
     <!-- В файл на диске -->
-    <add key="FLog" value="True" />
-    <add key="FLogException" value="True" />
-    <add key="FLogEvent" value="True" />
-    <add key="FLogServices" value="True" />
+    <add key="FLog" value="True"/>
+    <add key="FLogException" value="True"/>
+    <add key="FLogEvent" value="True"/>
+    <add key="FLogServices" value="True"/>
     <!-- *********** СЕРВИСЫ  ***************************************** -->
     <!-- сервис переноса положения вагонов TransferWT из WEB API -->
-    <add key="IntervalTransferWT" value="600" />
-    <add key="ActiveTransferWT" value="True" />
-    <add key="DateTimeStartNewTracking" value="2019-01-01 00:00:00" />
+    <add key="IntervalTransferWT" value="600"/>
+    <add key="ActiveTransferWT" value="True"/>
+    <add key="DateTimeStartNewTracking" value="2019-01-01 00:00:00"/>
     <!--Подключение к WebAPI METRANS-->
-    <add key="WebApiMTURL" value="https://inform.umtrans.com.ua" /><!--http://159.224.194.27:81--><!--portal.metrans.com.ua-->
-    <add key="WebApiMTUser" value="Arcelor1" />
-    <add key="WebApiMTPSW" value="12345678-" />
-    <add key="WebApiMTApi" value="/api/WagonsTracking" />
+    <add key="WebApiMTURL" value="https://inform.umtrans.com.ua"/><!--http://159.224.194.27:81--><!--portal.metrans.com.ua-->
+    <add key="WebApiMTUser" value="Arcelor1"/>
+    <add key="WebApiMTPSW" value="12345678-"/>
+    <add key="WebApiMTApi" value="/api/WagonsTracking"/>
   </appSettings>
   <connectionStrings>
-    <add name="log" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="log" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
     <!--<add name="UZ" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
-    <add name="metrans" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="IDS" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="metrans" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
+    <add name="IDS" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
     <!--<add name="log" connectionString="data source=HP_EDIK;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <entityFramework>
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
-        <parameter value="mssqllocaldb" />
+        <parameter value="mssqllocaldb"/>
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-13.0.0.0" newVersion="13.0.0.0" />
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-13.0.0.0" newVersion="13.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <publisherPolicy apply="no" />
-        <assemblyIdentity name="Oracle.ManagedDataAccess" publicKeyToken="89b483f429c47342" culture="neutral" />
-        <bindingRedirect oldVersion="4.121.0.0 - 4.65535.65535.65535" newVersion="4.122.19.1" />
+        <publisherPolicy apply="no"/>
+        <assemblyIdentity name="Oracle.ManagedDataAccess" publicKeyToken="89b483f429c47342" culture="neutral"/>
+        <bindingRedirect oldVersion="4.121.0.0 - 4.65535.65535.65535" newVersion="4.122.19.1"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
