--- a/IDSService/App.config
+++ b/IDSService/App.config
@@ -85,11 +85,11 @@
     <add key="IntervalUpdateIncomingSupply" value="3600"/><!-- выборка 1 раз в час -->
     <add key="SAP_IS_DayApproachLimit" value="30"/><!-- Количество дней, ожидания вагона с подходов -->
     <add key="SAP_IS_ExceptionsCargo" value="1;3;20;37;38;40"/><!-- Код грузов для исключения из опроса обновления по ним входящей поставки -->
-    <!-- сервис TransferOutgoingOfKIS перенос из системы КИС Транспорт в ИДС RWT  -->
-    <add key="ActiveTransferOutgoingOfKIS" value="True"/>
-    <add key="IntervalTransferOutgoingOfKIS" value="1800"/><!-- выборка 1 раз в 30 мин -->
-    <add key="TransferControlTimeIntervalKIS" value="24"/><!-- выборка на 12 часов  ранее -->
-    <add key="TransferSetOutgoingWagonOfKis" value="True"/><!-- Сдавать вагоны на УЗ автоматически по данным КИС -->    
+    <!-- сервис IDS_UpdateArrivalEPD обновление ЭПД входящих вагонов  -->
+    <add key="ActiveUpdateArrivalEPD" value="True"/>
+    <add key="IntervalUpdateArrivalEPD" value="3600"/><!-- выборка 1 раз в час -->
+    <add key="EPD_DayArhive" value="90"/> <!-- Количество дней хранения ЭПД на сервере УЗ (3 месяца) -->
+    <add key="EPD_Searsh" value="False"/> <!-- Бит включить поиск в базе даных УЗ -->    
     <!--Подключение к Модулю согласования-->
     <add key="SMS_HOST" value="10.21.2.139"/>
     <add key="SMS_PORT" value="8787"/>
