Добавил в сервис IDS выполнение потоков  Обновить документы по отправке  Обновить документы по прибытию

--- a/IDSService/App.config
+++ b/IDSService/App.config
@@ -88,8 +88,12 @@
     <!-- сервис IDS_UpdateArrivalEPD обновление ЭПД входящих вагонов  -->
     <add key="ActiveUpdateArrivalEPD" value="True"/>
     <add key="IntervalUpdateArrivalEPD" value="3600"/><!-- выборка 1 раз в час -->
-    <add key="EPD_DayArhive" value="90"/> <!-- Количество дней хранения ЭПД на сервере УЗ (3 месяца) -->
-    <add key="EPD_Searsh" value="False"/> <!-- Бит включить поиск в базе даных УЗ -->    
+    <add key="EPD_DayArhiveArrival" value="90"/> <!-- Количество дней хранения ЭПД на сервере УЗ (3 месяца) -->
+    <add key="EPD_SearshArrival" value="False"/> <!-- Бит включить поиск в базе даных УЗ -->   
+    <!-- сервис IDS_UpdateSendingEPD обновление ЭПД входящих вагонов  -->
+    <add key="ActiveUpdateSendingEPD" value="True"/>
+    <add key="IntervalUpdateSendingEPD" value="3600"/><!-- выборка 1 раз в час -->
+    <add key="EPD_DayArhiveSending" value="80"/> <!-- Количество дней хранения ЭПД на сервере УЗ (3 месяца) -->
     <!--Подключение к Модулю согласования-->
     <add key="SMS_HOST" value="10.21.2.139"/>
     <add key="SMS_PORT" value="8787"/>
