--- a/EFIDS/EFIDS.csproj
+++ b/EFIDS/EFIDS.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Concrete\Directory\EFDirectory_WagonManufacturers.cs" />
     <Compile Include="Concrete\Directory\EFDirectory_GenusWagons.cs" />
     <Compile Include="Concrete\EFRepository.cs" />
+    <Compile Include="Concrete\RWT\EFOut_Supply.cs" />
     <Compile Include="Concrete\RWT\EFOutgoing_UZ_Document_Pay.cs" />
     <Compile Include="Concrete\RWT\EFOutgoing_UZ_Document.cs" />
     <Compile Include="Concrete\RWT\EFOutgoing_UZ_Vagon_Pay.cs" />
@@ -121,6 +122,7 @@
     <Compile Include="Concrete\RWT\EFParkState_Wagon.cs" />
     <Compile Include="Concrete\RWT\EFParkState_Way.cs" />
     <Compile Include="Concrete\RWT\EFParkState_Station.cs" />
+    <Compile Include="Concrete\RWT\EFSAPOutgoingSupply.cs" />
     <Compile Include="Concrete\RWT\EFUZ_DOC_OUT.cs" />
     <Compile Include="Concrete\RWT\EFWagonInternalRoutes.cs" />
     <Compile Include="Concrete\RWT\EFWagonInternalOperation.cs" />
@@ -232,6 +234,8 @@
     <Compile Include="Entities\RWT\Outgoing_UZ_Vagon_Cont.cs" />
     <Compile Include="Entities\RWT\Outgoing_UZ_Vagon_Pay.cs" />
     <Compile Include="Entities\Directory\Directory_OperatorsWagonsGroup.cs" />
+    <Compile Include="Entities\RWT\Out_Supply.cs" />
+    <Compile Include="Entities\RWT\SAPOutgoingSupply.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
