Сервис IDS Добавил переменные в app.config

--- a/IDSService/App.config
+++ b/IDSService/App.config
@@ -85,6 +85,9 @@
     <add key="IntervalUpdateIncomingSupply" value="3600"/><!-- выборка 1 раз в час -->
     <add key="SAP_IS_DayApproachLimit" value="30"/><!-- Количество дней, ожидания вагона с подходов -->
     <add key="SAP_IS_ExceptionsCargo" value="1;3;20;37;38;40"/><!-- Код грузов для исключения из опроса обновления по ним входящей поставки -->
+    <!-- сервис IDS_UpdateOutgoingSupply обновление исходящей поставки через SAP  -->
+    <add key="ActiveUpdateOutgoingSupply" value="True"/>
+    <add key="IntervalUpdateOutgoingSupply" value="3600"/><!-- выборка 1 раз в час -->
     <!-- сервис IDS_UpdateArrivalEPD обновление ЭПД входящих вагонов  -->
     <add key="ActiveUpdateArrivalEPD" value="True"/>
     <add key="IntervalUpdateArrivalEPD" value="3600"/><!-- выборка 1 раз в час -->
