Заменил адрес на metrans

--- a/MetransAPIService/App.config
+++ b/MetransAPIService/App.config
@@ -89,7 +89,7 @@
     <add key="ArrivalToRailWay" value="True"/>
     <add key="DayRangeArrivalCars" value="5"/>
     <!-- *********** WEB API    ******************************************** -->
-    <add key="WebApiMTURL" value="https://inform.umtrans.com.ua"/>
+    <add key="WebApiMTURL" value="https://inform.metrans.com.ua"/>
     <add key="WebApiMTUser" value="Arcelor1"/>
     <add key="WebApiMTPSW" value="12345678-"/>
     <add key="WebApiMTApi" value="/api/WagonsTracking"/>
