--- a/Test/App.config
+++ b/Test/App.config
@@ -32,7 +32,7 @@
     <add key="FLogEvent" value="True"/>
     <add key="FLogServices" value="True"/>
     <!-- *********** WEB API    ******************************************** -->
-    <add key="WebApiMTURL" value="https://inform.umtrans.com.ua"/>
+    <add key="WebApiMTURL" value="https://inform.metrans.com.ua"/>
     <!--http://159.224.194.27:81-->
     <!--portal.metrans.com.ua-->
     <add key="WebApiMTUser" value="Arcelor1"/>
