--- a/IDSService/App.config
+++ b/IDSService/App.config
@@ -98,8 +98,8 @@
     <add key="IntervalUpdateSendingEPD" value="3600"/><!-- выборка 1 раз в час -->
     <add key="EPD_DayArhiveSending" value="80"/> <!-- Количество дней хранения ЭПД на сервере УЗ (3 месяца) -->
     <!--Подключение к Модулю согласования-->
-    <add key="SMS_HOST" value="10.21.2.139"/>
-    <add key="SMS_PORT" value="8787"/>
+	<add key="SMS_HOST" value="10.21.2.223" /><!--10.21.2.139-->
+	<add key="SMS_PORT" value="8787" />
     <!-- Получение информации о вагоне -->
     <add key="WebApiUZWagonURL" value="https://uz.gov.ua/car_info/index.php"/>
     <!-- Сервис доступа к САП входящая и исходящая поставка -->
