--- a/MetransAPIService/App.config
+++ b/MetransAPIService/App.config
@@ -95,8 +95,8 @@
     <add key="WebApiMTApi" value="/api/WagonsTracking"/>
     <add key="WebApiMTArrivalApi" value="/api/TrainNaturList"/>
     <!--Подключение к Модулю согласования-->
-    <add key="SMS_HOST" value="10.21.2.139"/>
-    <add key="SMS_PORT" value="8787"/>
+	<add key="SMS_HOST" value="10.21.2.223" /><!--10.21.2.139-->
+	<add key="SMS_PORT" value="8787" />
     <!-- Получение информации о вагоне --><!--
     <add key="WebApiUZWagonURL" value="https://uz.gov.ua/car_info/index.php" />-->
   </appSettings>
