--- a/WEB_UI/Web.config
+++ b/WEB_UI/Web.config
@@ -19,7 +19,7 @@
     <!-- Получение информации о вагоне -->
     <add key="WebApiUZWagonURL" value="https://uz.gov.ua/car_info/index.php" />
     <!-- Подключение к сервису модуля согласования -->
-    <add key="SMS_HOST" value="10.21.2.139" />
+    <add key="SMS_HOST" value="10.21.2.223" /> <!--10.21.2.139-->
     <add key="SMS_PORT" value="8787" />
     <!-- Настройки логирования -->
     <add key="ESourceName" value="Web_IDS" />
