--- a/WEB_UI/WEB_UI.csproj
+++ b/WEB_UI/WEB_UI.csproj
@@ -2036,6 +2036,7 @@
     <Content Include="Content\module\wsd\form_outgoing_cars_detali.css" />
     <Content Include="Content\module\wsd\table_outgoing_cars.css" />
     <Content Include="Content\module\wsd\table_outgoing_detention_return.css" />
+    <Content Include="Content\module\wsd\table_incoming_sostav.css" />
     <Content Include="Content\module\wsd\table_outgoing_sostav.css" />
     <Content Include="Content\module\wsd\view_report_remainder_cars.css" />
     <Content Include="Content\module\wsd\view_outgoing_cars.css" />
@@ -2050,6 +2051,7 @@
     <Content Include="Content\view\admin\_layout.css" />
     <Content Include="Content\view\directory\ways.css" />
     <Content Include="Content\view\directory\search_wagon.css" />
+    <Content Include="Content\view\idsrwt\incoming1.css" />
     <Content Include="Content\view\idsrwt\outgoing1.css" />
     <Content Include="Content\view\shared\print_way.css" />
     <Content Include="Content\view\shared\print_gfa.css" />
@@ -2128,6 +2130,7 @@
     <Content Include="Scripts\module\wsd\form_ho_outgoing_sostav.js" />
     <Content Include="Scripts\module\wsd\table_outgoing_cars.js" />
     <Content Include="Scripts\module\wsd\table_outgoing_detention_return.js" />
+    <Content Include="Scripts\module\wsd\table_incoming_sostav.js" />
     <Content Include="Scripts\module\wsd\table_outgoing_sostav.js" />
     <Content Include="Scripts\module\wsd\table_total_balance.js" />
     <Content Include="Scripts\module\wsd\view_report_remainder_cars.js" />
@@ -2216,7 +2219,7 @@
     <Content Include="Areas\Directory\Views\Home\Ways.cshtml" />
     <Content Include="Areas\Directory\Views\Home\Park.cshtml" />
     <Content Include="Areas\Directory\Views\Home\OperatorsWagons.cshtml" />
-    <Content Include="Areas\IDSRWT\Views\Home\Outgoing1.cshtml" />
+    <Content Include="Areas\IDSRWT\Views\Home\Incoming1.cshtml" />
     <None Include="_app_offline.htm">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
@@ -2759,8 +2762,9 @@
     <Content Include="Scripts\view\idsmors\electronic_cards.js" />
     <Content Include="Scripts\view\idsmors\report_wagons.js" />
     <Content Include="Scripts\view\idsmors\park_wagons.js" />
+    <Content Include="Scripts\view\idsrwt\main_incoming.js" />
     <Content Include="Scripts\view\idsrwt\main_outgoing.js" />
-    <Content Include="Scripts\view\idsrwt\outgoing.js" />
+    <Content Include="Scripts\view\idsrwt\del_outgoing.js" />
     <Content Include="Scripts\view\idsrwt\incoming.js" />
     <Content Include="Scripts\view\idsrwt\arrival.js" />
     <Content Include="Scripts\view\idsrwt\test.js" />
