Добавил новый класс IDS_Directory  в него буду переносить IDSDirectory  + Перенес и переделал метод GetDirectory_ExternalStation

--- a/IDS/IDS.csproj
+++ b/IDS/IDS.csproj
@@ -57,6 +57,7 @@
     <Compile Include="IDSTransfer.cs" />
     <Compile Include="IDSThread.cs" />
     <Compile Include="IDS_Base.cs" />
+    <Compile Include="IDS_Directory.cs" />
     <Compile Include="IDS_RWT.cs" />
     <Compile Include="IDS_SAP.cs" />
     <Compile Include="IDS_WIR.cs" />
