Тест нового метода GetDirectory_ExternalStation

--- a/Test/App.config
+++ b/Test/App.config
@@ -80,6 +80,9 @@
     <add key="DateTimeStartNewTracking" value="2019-01-01 00:00:00"/>
 
     <add key="WebApiUZWagonURL" value="https://uz.gov.ua/car_info/index.php"/>
+    <add key="WebApi_UZ_GOV" value="https://uz.gov.ua/"/>	  
+    <add key="WebApi_WAGON" value="car_info/index.php"/>	  
+    <add key="WebApi_STATION" value="nsi_cargo_stations/Nsi_Stan.php"/>	  
 
     <add key="SMS_HOST" value="10.21.2.139"/>
     <add key="SMS_PORT" value="8787"/>
