--- a/WEB_UI/WEB_UI.csproj
+++ b/WEB_UI/WEB_UI.csproj
@@ -312,7 +312,6 @@
     <Compile Include="Controllers\api\IDS\RWT\IDS_RWT_Incoming_ArrivalSostavController.cs" />
     <Compile Include="Controllers\api\IDS\RWT\IDS_RWT_IncomingController.cs" />
     <Compile Include="Controllers\api\IDS\RWT\IDS_RWT_WSDController.cs" />
-    <Compile Include="Controllers\api\IDS\RWT\Outgoing.cs" />
     <Compile Include="Controllers\api\Metrans\Metrans_ConsigneeController.cs" />
     <Compile Include="Controllers\api\Metrans\Metrans_ArrivalSostavController.cs" />
     <Compile Include="Controllers\api\Directoty\UZ_Directory_InternalRailroadController.cs" />
@@ -2034,11 +2033,14 @@
     <Content Include="Content\module\wsd\form_hd_outgoing_sostav.css" />
     <Content Include="Content\module\wsd\form_hi_incoming_sostav.css" />
     <Content Include="Content\module\wsd\form_ho_outgoing_sostav.css" />
+    <Content Include="Content\module\wsd\form_incoming_cars_detali.css" />
     <Content Include="Content\module\wsd\form_outgoing_cars_detali.css" />
+    <Content Include="Content\module\wsd\table_incoming_cars.css" />
     <Content Include="Content\module\wsd\table_outgoing_cars.css" />
     <Content Include="Content\module\wsd\table_outgoing_detention_return.css" />
     <Content Include="Content\module\wsd\table_incoming_sostav.css" />
     <Content Include="Content\module\wsd\table_outgoing_sostav.css" />
+    <Content Include="Content\module\wsd\view_incoming_cars.css" />
     <Content Include="Content\module\wsd\view_report_remainder_cars.css" />
     <Content Include="Content\module\wsd\view_outgoing_cars.css" />
     <Content Include="Content\module\wsd\view_return_cars.css" />
@@ -2128,13 +2130,16 @@
     <Content Include="Scripts\module\table_arrival.js" />
     <Content Include="Scripts\module\wsd\form_hd_outgoing_sostav.js" />
     <Content Include="Scripts\module\wsd\form_hi_incoming_sostav.js" />
+    <Content Include="Scripts\module\wsd\form_incoming_cars_detali.js" />
     <Content Include="Scripts\module\wsd\form_outgoing_cars_detali.js" />
     <Content Include="Scripts\module\wsd\form_ho_outgoing_sostav.js" />
+    <Content Include="Scripts\module\wsd\table_incoming_cars.js" />
     <Content Include="Scripts\module\wsd\table_outgoing_cars.js" />
     <Content Include="Scripts\module\wsd\table_outgoing_detention_return.js" />
     <Content Include="Scripts\module\wsd\table_incoming_sostav.js" />
     <Content Include="Scripts\module\wsd\table_outgoing_sostav.js" />
     <Content Include="Scripts\module\wsd\table_total_balance.js" />
+    <Content Include="Scripts\module\wsd\view_incoming_cars.js" />
     <Content Include="Scripts\module\wsd\view_report_remainder_cars.js" />
     <Content Include="Scripts\module\wsd\view_return_cars.js" />
     <Content Include="Scripts\module\wsd\view_history_operation_send.js" />
